infra/apps/ghostfolio/ghostfolio-forwardauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ghostfolio-authelia-forwardauth
  namespace: ghostfolio
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/auth/api/authz/forward-auth
    trustForwardHeader: true
    maxResponseBodySize: 1048576
