infra/apps/ghostfolio/ghostfolio-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ghostfolio-strip-prefix
  namespace: ghostfolio
spec:
  stripPrefix:
    prefixes:
      - /ghostfolio
