infra/apps/ghostfolio/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostfolio-redis
  namespace: ghostfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ghostfolio-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghostfolio-redis
    spec:
      nodeSelector:
        region: gz
      containers:
        - name: redis
          image: redis:7-alpine
          args:
            - --requirepass
            - $(REDIS_PASSWORD)
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
