infra/apps/ghostfolio/ghostfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  selector:
    app.kubernetes.io/name: ghostfolio
  ports:
    - name: http
      port: 80
      targetPort: 3333
