infra/apps/ghostfolio/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio-redis
  namespace: ghostfolio
spec:
  selector:
    app.kubernetes.io/name: ghostfolio-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
